[LAB-531] add beta docs for ABN endpoint (#339)
* [LAB-531] add beta docs for ABN endpoint

* [LAB-531] add address inference docs

* [LAB-531] adjust location and wording

* [LAB-531] move callout

* [LAB-531] fix typo

* remove note

---------

Co-authored-by: Rui Pires <pires@tryvital.io>

--- a/docs/lab/overview/insurance.mdx
+++ b/docs/lab/overview/insurance.mdx
@@ -8,12 +8,14 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 Vital supports ordering with commercial insurance billing. To set this up, there are a set of steps required. This document explains the complete flow for ordering via commercial insurance.
 
-<Note>
-Only commercial payors are supported and public insurance payors (medicare, medicaid, etc...) are not supported.
-</Note>
-
 
 ## Setting Insurance Data
+
+<Note>
+**Medicare and Medicaid location inference closed beta**
+
+Medicare and Medicaid location inference is in closed beta. Get in touch with your Customer Success manager for more information or check out the [API docs](/api-reference/user/create-insurance) on the beta channel.
+</Note>
 
 To place an order for a `user` in Vital with commercial insurance, you must first provide Vital with insurance data.
 
