Restructure the Home section and give Junction Management API a dedicated page

--- a/docs/api-details/regions.mdx
+++ b/docs/api-details/regions.mdx
@@ -2,9 +2,13 @@
 title: 'Regions'
 ---
 
-Vital stores data depending on the region specified when creating a team. There are currently two regions supported within Vital.
+Junction Team is a **regional** resource. All data of the Team are stored in the region you selected. This
+cannot be changed afterwards. Make sure you choose a region that is suitable to your data residency requirements.
 
-| Regions |                                              |
-| ------- | -------------------------------------------- |
-| US      | Data stored in US-Central (Subject to HIPAA) |
-| EU      | Data stored in the EU (Subject to GPDR)      |
+| Regions | Data Residency                                     |
+| ------- | -------------------------------------------------- |
+| 🇺🇸 US      | Data stored in United States (Subject to HIPAA) |
+| 🇪🇺 EU      | Data stored in Belgium (Subject to GPDR)        |
+
+Your Junction Org is a **global** resource — you can start with a Team in one region and create more in a different
+region as you expand.
