--- a/docs/home/welcome.mdx
+++ b/docs/home/welcome.mdx
@@ -10,46 +10,48 @@ description: "Here you'll find guides, resources, and references to build using 
   Vital among the docs, please bear with us as we get this updated.
 </Note>
 <CardGroup cols={2}>
-  <Card title="Quickstart" icon="bolt" color="#FDD023" href="/home/quickstart">
-    The Quickstart walk-through gives you an overview of how to integrate with
-    Junction. By the end of this guide, you'll have a working app with both
-    backend and frontend.
-  </Card>
   <Card
-    title="Providers"
-    icon="gears"
-    color="#0285c7"
-    href="/wearables/providers/introduction"
-  >
-    Here you can find all the available providers, alongside our roadmap. You
-    can see how each provider behave (pull vs webhook) and the default max
-    amount of days we pull from each. For custom integrations, please contact
-    us.
-  </Card>
-  <Card
-    title="Environments"
-    icon="seedling"
-    color="#16a34a"
-    href="/home/environments"
-  >
-    This gives you a quick glance about our environments and regions. It also
-    tells you the difference between production and sandbox
-  </Card>
-  <Card
-    title="Labs and Test Kits"
+    title="Lab Testing"
     icon="flask"
     color="#BF40BF"
     href="/lab/overview/introduction"
   >
-    Junction’s lab test API allows digital health companies to carry out at-home
-    lab testing. Companies can use the API to order a variety of tests, using
-    various sampling methods.
+    Access a nationwide lab network. In-person, at-home, or hybrid methods to maximize completion rates.
+  </Card>
+  <Card
+    title="Device Data Providers"
+    icon="gears"
+    color="#0285c7"
+    href="/wearables/providers/introduction"
+  >
+    Connect to 300+ devices, and receive data in Junction standardized schemas.
+  </Card>
+  <Card
+    title="Junction API"
+    icon="seedling"
+    color="#16a34a"
+    href="/api-details/junction-api"
+  >
+    User management, Device connection and data access, Lab Testing orders and results, Horizon AI Query.
+  </Card>
+  <Card
+    title="Junction Management API"
+    icon="building"
+    color="#16a34a"
+    href="/api-details/junction-management-api"
+  >
+    Programmatically manage all Junction regional and global resources in your organization.
   </Card>
 </CardGroup>
 
 ## Popular Topics
 
 <CardGroup cols={1}>
+  <Card title="Quickstart" icon="bolt" color="#FDD023" href="/home/quickstart" horizontal>
+    The Quickstart walk-through gives you an overview of how to integrate with
+    Junction. By the end of this guide, you'll have a working app with both
+    backend and frontend.
+  </Card>
   <Card
     title="Apple HealthKit"
     icon="apple"
