--- a/docs/snippets/org-management-api.mdx
+++ b/docs/snippets/org-management-api.mdx
@@ -1,9 +1,10 @@
 <Info>
-Org Management API is available for [the Scale plan](https://tryvital.io/pricing).
+[Junction Management API](/api-details/junction-management-api) is available for [the Scale plan](https://tryvital.io/pricing).
 </Info>
 
 <Tip>
 The base URL of this endpoint is `https://api.tryvital.io/management/`.
 
-The endpoint accepts only **Org Key** (`X-Vital-Org-Key`). Team API Key is not applicable.
+The endpoint accepts only [Management Key](/api-details/junction-management-api#authentication) (`X-Management-Key`).
+Team API Key is not accepted.
 </Tip>
