--- a/docs/api-details/junction-management-api.mdx
+++ b/docs/api-details/junction-management-api.mdx
@@ -15,6 +15,8 @@ You use Junction Management API to:
    * [Team Custom Credentials](/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials); and
    * [Team Continuous Query](/api-reference/horizon-ai/continuous-query/create).
 
+Note that you can access a lot of Junction Management API functionalities through the [Junction Dashboard](https://app.tryvital.io/) as well.
+
 <Info>
 For device and lab testing access, see [Junction API](/api-details/junction-api).
 </Info>
