Add changelog entry on retrying state

--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -2,6 +2,15 @@
 title: "API"
 ---
 
+### Enhanced Historical Data Pull Status Tracking (May 2025)
+
+We've added a new "Retrying" state to the Historical Pull Status page and the historical introspection endpoint, helping you distinguish temporary issues from permanent failures.
+Additionally, failed historical pulls now include extra error information, making troubleshooting easier and more efficient.
+
+<Info>
+This applies to connections established after 9th May.
+</Info>
+
 ### Prepare Team Custom Credentials endpoint (Aug 2024)
 
 The new [Prepare Team Custom Credentials](/api-reference/org-management/team-custom-credentials/prepare-team-custom-credentials) endpoint
