[LAB-518] docs: add on-site collection modality

--- a/docs/lab/overview/introduction.mdx
+++ b/docs/lab/overview/introduction.mdx
@@ -41,6 +41,7 @@ Our lab test API is available throughout the US. This is our current coverage by
 * [At-home test kits](/lab/overview/testing-modalities#at-home-test-kits): 49 states (all excluding NY).
 * [Walk-in tests](/lab/overview/testing-modalities#walk-in-tests): 49 states (all excluding NY).
 * [At-home phlebotomy](/lab/overview/testing-modalities#at-home-phlebotomy): 35 states at the moment. Full coverage coming soon.
+* [On-site collection(/lab/overview/testing-modalities#on-site-collection)]: In beta testing
 
 <Info>
 To find out more about our coverage, you can use the [area info endpoint](/api-reference/lab-testing/area-info) - this endpoint takes a zip code and tells whether that area is covered by our service or not. Or you can contact us at support@tryvital.io for more info.
