--- a/docs/lab/overview/testing-modalities.mdx
+++ b/docs/lab/overview/testing-modalities.mdx
@@ -56,6 +56,10 @@ Walk-in tests require the patient to visit a lab location (often referred to as 
 
 This workflow closely mirrors the at-home phlebotomy flow, except that appointment scheduling is not required. With a "walk-in" test, a patient can simply _walk in_ to a PSC or they can schedule an appointment (Quest only).
 
+## On-site collection
+
+On-site collection also require the patient to visit a Patient Service Center closely mirrors the walk-in test flow. Scheduling an appointment is not necessary. On-site collections are currently in beta testing.
+
 <Info>
   Expanded support for on-site or in-clinic draws coming soon\!
 </Info>
