[LAB-518] docs: add missing req bypassed status

--- a/docs/lab/testkits/order-lifecycle.mdx
+++ b/docs/lab/testkits/order-lifecycle.mdx
@@ -19,6 +19,7 @@ possible low-level status are:
 
 - `ordered`: Vital received the order, stored it into our system, and started processing it asynchronously.
 - `requisition_created`: An order requisition form was validated and created with the partner laboratory, making the order available to be carried out.
+- `requisition_bypassed`: An order requisition form wasn't created when the order was placed with us because it already existed.
 - `transit_customer`: The teskit is shipped and in transit to the customer. 
 - `out_for_delivery`: The teskit is out for delivery.
 - `with_customer`: The teskit is delivered to the customer.
