--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -67,6 +67,7 @@ Below is a full list of all the available statuses by test modality. The names s
 - `received.testkit.awaiting_registration`
 - `received.testkit.testkit_registered`
 - `received.testkit.requisition_created`
+- `received.testkit.requisition_bypassed`
 - `collecting_sample.testkit.transit_customer`
 - `collecting_sample.testkit.out_for_delivery`
 - `collecting_sample.testkit.with_customer`
@@ -86,6 +87,7 @@ Below is a full list of all the available statuses by test modality. The names s
 
 - `received.walk_in_test.ordered`
 - `received.walk_in_test.requisition_created`
+- `received.walk_in_test.requisition_bypassed`
 - `collecting_sample.walk_in_test.appointment_pending`
 - `collecting_sample.walk_in_test.appointment_scheduled`
 - `collecting_sample.walk_in_test.appointment_cancelled`
@@ -98,6 +100,7 @@ Below is a full list of all the available statuses by test modality. The names s
 
 - `received.at_home_phlebotomy.ordered`
 - `received.at_home_phlebotomy.requisition_created`
+- `received.at_home_phlebotomy.requisition_bypassed`
 - `collecting_sample.at_home_phlebotomy.appointment_pending`
 - `collecting_sample.at_home_phlebotomy.appointment_scheduled`
 - `collecting_sample.at_home_phlebotomy.draw_completed`
