[DEV-491] Team admin role: changelog entry

--- a/docs/changelog/core/dashboard.mdx
+++ b/docs/changelog/core/dashboard.mdx
@@ -2,6 +2,34 @@
 title: "Dashboard"
 ---
 
+### Introducing Team Admin Roles (May 2025)
+
+Introducing **Team Admin** roles for the Junction Dashboard users. Choose between organization-wide and team-specific admin privileges when adding members.
+
+<Accordion icon="magnifying-glass" iconType="duotone" title="Details" defaultOpen>
+## What’s New
+
+- **Two Permission Levels** – When inviting new members to your organization, you can now choose between **Org Admin** and **Team Admin** roles.
+- **Team-Specific Access** – **Team Admins** can be granted access to specific teams by providing a list of team IDs during invitation or role modification.
+
+## Role Capabilities
+
+### Org Admin
+
+- Full access to all organization resources and teams
+- Can view and edit roles of all organization members
+- Complete access to billing information and organization settings
+
+### Team Admin
+
+- Access limited to specifically assigned teams
+- Cannot view or edit roles of other organization members
+- No access to teams outside their allowed list
+- Cannot view or modify billing information or other organization-level settings
+
+</Accordion>
+
+
 ### Improved Order Search experience (Aug 2024)
 
 We have improved the search and filtering capabilities in the Orders page, helping you quickly locate specific orders and information.
