--- a/docs/webhooks/introduction.mdx
+++ b/docs/webhooks/introduction.mdx
@@ -209,3 +209,13 @@ Check out the [Workout Created event](/event-catalog/daily.data.workouts.created
     loading="lazy"
   />
 </div>
+
+### Managing Webhooks
+
+You can manage your team's webhooks programmatically using our [Webhooks API](/api-reference/org-management/team-webhook/list). This API allows you to:
+
+- List all webhooks for your team
+- Create new webhooks
+- Update existing webhooks
+- Delete webhooks
+- Manage webhook headers and secrets
