Add to the changelog

--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -2,6 +2,17 @@
 title: "API"
 ---
 
+### Webhook Management Endpoints (May 2025)
+
+You can now programmatically manage your webhooks via the API. The new endpoints allow you to:
+
+- **CRUD** (create/read/update/delete) your webhooks
+- Manage webhook **headers**
+- Update webhook **secrets**
+
+<Info>
+Org Management API is available for [the Scale plan](https://tryvital.io/pricing).
+</Info>
 
 ### Team Management Keys (May 2025)
 
