Update the intro

--- a/docs/webhooks/introduction.mdx
+++ b/docs/webhooks/introduction.mdx
@@ -214,8 +214,6 @@ Check out the [Workout Created event](/event-catalog/daily.data.workouts.created
 
 You can manage your team's webhooks programmatically using our [Webhooks API](/api-reference/org-management/team-webhook/list). This API allows you to:
 
-- List all webhooks for your team
-- Create new webhooks
-- Update existing webhooks
-- Delete webhooks
-- Manage webhook headers and secrets
+- **CRUD** (create/read/update/delete) your webhooks
+- Manage webhook **headers**
+- Update webhook **secrets**
