--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -4,7 +4,7 @@ title: "API"
 
 ### Webhook Management Endpoints (May 2025)
 
-You can now programmatically manage your webhooks via the API. The new endpoints allow you to:
+You can now programmatically manage your webhooks via the [Webhooks API](/api-reference/org-management/team-webhook/list). The new endpoints allow you to:
 
 - **CRUD** (create/read/update/delete) your webhooks
 - Manage webhook **headers**
