Write documentation for the webhooks API (#360)
* Write documentation for the webhooks API

* Add to the changelog

* Update the intro

* Improve the changelog

--- a/docs/webhooks/introduction.mdx
+++ b/docs/webhooks/introduction.mdx
@@ -209,3 +209,11 @@ Check out the [Workout Created event](/event-catalog/daily.data.workouts.created
     loading="lazy"
   />
 </div>
+
+### Managing Webhooks
+
+You can manage your team's webhooks programmatically using our [Webhooks API](/api-reference/org-management/team-webhook/list). This API allows you to:
+
+- **CRUD** (create/read/update/delete) your webhooks
+- Manage webhook **headers**
+- Update webhook **secrets**
