📝 Changelog entry for panel renaming and archiving

--- a/docs/changelog/core/dashboard.mdx
+++ b/docs/changelog/core/dashboard.mdx
@@ -2,6 +2,19 @@
 title: "Dashboard"
 ---
 
+### Introducing Panel Renaming & Archiving (May 2025)
+
+We’ve added more control to how you manage test panels:
+
+- Rename panel names directly in the Test Catalog
+- Archive outdated or unused panels to keep things clean
+- View archived panels using the "Status" filter and "unarchive" to make panels active again
+
+Existing orders tied to archived panels will remain active and processable.
+
+[Full product guide →](https://support.tryvital.com/articles/1278554980-managing-lab-panels)
+
+
 ### Introducing Team Admin Roles (May 2025)
 
 Introducing **Team Admin** roles for the Junction Dashboard users. Choose between organization-wide and team-specific admin privileges when adding members.
@@ -117,4 +130,3 @@ Provides device connection availability and data ingestion insights of the Vital
 You can also obtain this same information programmatically through the [Introspection API](/api-reference/introspection/user-resources).
 
 </Accordion>
-
