[LAB-518] docs: endpoints and beta notices

--- a/docs/lab/walk-in/locations.mdx
+++ b/docs/lab/walk-in/locations.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Patient Service Centers and Appointments"
 ---
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 # Finding nearest serviceable Patient Service Centers
 
