--- a/docs/lab/walk-in/order-lifecycle.mdx
+++ b/docs/lab/walk-in/order-lifecycle.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Order and Appointment Lifecycle"
 ---
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 The **Walk-In Phlebotomy** orders are composed of two different lifecycles, the **Order** lifecycle and
 the **appointment** lifecycle, detailed in the following sections.
