--- a/docs/lab/walk-in/webhooks.mdx
+++ b/docs/lab/walk-in/webhooks.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Webhooks"
 ---
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 The following webhook events are of interest, when placing a Walk-in order. Those are
 described in detail in the following sections.
