[LAB-518] docs: add beta notice to correct page

--- a/docs/lab/on-site-collection/order-lifecycle.mdx
+++ b/docs/lab/on-site-collection/order-lifecycle.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Order Lifecycle"
 ---
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 The **On-site Collection** orders are composed of one lifecycle, the **Order** lifecycle, detailed in the following section.
 
