--- a/docs/lab/on-site-collection/overview.mdx
+++ b/docs/lab/on-site-collection/overview.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Overview"
 ---
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 On-site collections are one of our offered modalities.
 This modality is focused on patients that are able to go to a Laboratory to have their blood drawn.
