--- a/docs/lab/on-site-collection/webhooks.mdx
+++ b/docs/lab/on-site-collection/webhooks.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Webhooks"
 ---
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 The following webhook events are of interest, when placing an On-site collection. Those are
 described in detail in the following sections.
