--- a/docs/api-reference/lab-testing/update-order-draw-completed.mdx
+++ b/docs/api-reference/lab-testing/update-order-draw-completed.mdx
@@ -1,4 +1,5 @@
 ---
+title: "Update Order Draw Completed"
 openapi: "PATCH /v3/order/{order_id}/draw_completed"
 ---
 import FeatureBeta from '/snippets/feature-beta.mdx';
