--- a/docs/lab/on-site-collection/communications.mdx
+++ b/docs/lab/on-site-collection/communications.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Communications"
 ---
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 Communication for patients is done via email or SMS, for On-site collection orders.
 Customers have the following options when setting this up:
