[LAB-518] docs: fix missing closing tag

--- a/docs/api-reference/lab-testing/update-order-draw-completed.mdx
+++ b/docs/api-reference/lab-testing/update-order-draw-completed.mdx
@@ -37,6 +37,8 @@ const client = new VitalClient({
 const data = await client.labTests.updateOnSiteCollectionOrderDrawCompleted("order_id")
 ```
 
+</RequestExample>
+
 <ResponseExample>
 
 ```json Response
