[LAB-518] docs: add OSC update endpoint description

--- a/docs/api-reference/lab-testing/update-order-draw-completed.mdx
+++ b/docs/api-reference/lab-testing/update-order-draw-completed.mdx
@@ -6,6 +6,8 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 <FeatureBeta />
 
+Update an on-site collection order when the draw has been completed.
+
 <RequestExample>
 
 ```python Python
