[LAB-518] docs: update names to Junction

--- a/docs/lab/on-site-collection/locations.mdx
+++ b/docs/lab/on-site-collection/locations.mdx
@@ -9,7 +9,7 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 Verifying if a particular zip code is serviceable is an important step, as not all labs have patient service centers within a state or within a reasonable distance.
 
-The recommend high level flow for verifying PSC availability at Vital is:
+The recommend high level flow for verifying PSC availability at Junction is:
 
 - Fetch PSC location data via the [`GET /v3/order/area/info`](/api-reference/lab-testing/area-info) endpoint, the response payload should look like this:
 
