--- a/docs/lab/on-site-collection/order-lifecycle.mdx
+++ b/docs/lab/on-site-collection/order-lifecycle.mdx
@@ -14,6 +14,10 @@ each lab testing modality has the following format
 
 ```[HIGH-LEVEL STATUS].[TEST MODALITY].[LOW-LEVEL STATUS]```
 
+For on-site collections, this will look like:
+
+```[HIGH-LEVEL STATUS].on_site_collection.[LOW-LEVEL STATUS]```
+
 For each modality, there can be multiple **low-level status**, for **On-site Collection** the
 possible low-level status are:
 
