[LAB-518] docs: fix typo

--- a/docs/lab/overview/testing-modalities.mdx
+++ b/docs/lab/overview/testing-modalities.mdx
@@ -7,7 +7,7 @@ By integrating with our API, you will have access to the following testing modal
 - At-home test kit.
 - At-home phlebotomy visit.
 - Walk-in test visit.
-- On-site colllection visit (in closed beta).
+- On-site collection visit (in closed beta).
 
 ## At-home test kits
 
