[LAB-518] docs: add on-site collection modality (#356)
* [LAB-518] docs: add on-site collection modality

* [LAB-518] docs: endpoints and beta notices

* [LAB-518] docs: add beta notice to correct page

* [LAB-518] docs: fix missing closing tag

* [LAB-518] docs: add OSC update endpoint description

* [LAB-518] docs: add OSC to list of modalities

* [LAB-518] docs: fix url

* [LAB-518] docs: update names to Junction

* [LAB-518] docs: add example of OSC status

* [LAB-518] docs: move shared locations mdx to overview

* [LAB-518] docs: fix typo

--- a/docs/lab/overview/testing-modalities.mdx
+++ b/docs/lab/overview/testing-modalities.mdx
@@ -7,6 +7,7 @@ By integrating with our API, you will have access to the following testing modal
 - At-home test kit.
 - At-home phlebotomy visit.
 - Walk-in test visit.
+- On-site collection visit (in closed beta).
 
 ## At-home test kits
 
@@ -55,6 +56,10 @@ The flow for at-home phlebotomy orders is as follows:
 Walk-in tests require the patient to visit a lab location (often referred to as a Patient Service Center or PSC)—such as Quest, Labcorp, or BioReference—to have their sample collected. A requisition form is needed to perform the test, which Junction’s API generates if the patient meets the required conditions.
 
 This workflow closely mirrors the at-home phlebotomy flow, except that appointment scheduling is not required. With a "walk-in" test, a patient can simply _walk in_ to a PSC or they can schedule an appointment (Quest only).
+
+## On-site collection
+
+On-site collection also require the patient to visit a Patient Service Center closely mirrors the walk-in test flow. Scheduling an appointment is not necessary. On-site collections are currently in beta testing.
 
 <Info>
   Expanded support for on-site or in-clinic draws coming soon\!
