--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -108,3 +108,14 @@ Below is a full list of all the available statuses by test modality. The names s
 - `sample_with_lab.at_home_phlebotomy.partial_results`
 - `completed.at_home_phlebotomy.completed`
 - `cancelled.at_home_phlebotomy.cancelled`
+
+### On-site collection statuses (currently in beta testing)
+
+- `received.on_site_collection.ordered`
+- `received.on_site_collection.requisition_created`
+- `received.on_site_collection.requisition_bypassed`
+- `collecting_sample.on_site_collection.draw_completed`
+- `sample_with_lab.on_site_collection.partial_results`
+- `completed.on_site_collection.completed`
+- `failed.on_site_collection.sample_error`
+- `cancelled.on_site_collection.cancelled`
