--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -2,6 +2,54 @@
 title: "API"
 ---
 
+import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
+
+# Introducing Timeseries Data Support to Continuous Query (June 2025)
+
+<HorizonAIBeta />
+
+We've expanded Continuous Query to support **timeseries resources** in addition to the previously available summary types.
+This makes it easier for you to handle high‑volume timeseries data and eliminates the need to build custom scalable solutions on your backend.
+
+## What's New
+
+- **Query multiple fields** from different timeseries resources in a single operation
+- Retrieve both **discrete samples** (e.g. heart rate) and **interval samples** (e.g. workout distance)
+
+<Accordion icon="link" iconType="duotone" title="DSL Example" defaultOpen>
+**Example Select Expression**
+
+```python
+select(
+    # Blood Pressure
+    Timeseries.col("blood_pressure").field("systolic"),
+    Timeseries.col("blood_pressure").field("diastolic"),
+    Timeseries.col("blood_pressure").field("timezone_offset"),
+
+    # Discrete Samples
+    Timeseries.col("heartrate").field("value"),
+    Timeseries.col("heartrate").field("timezone_offset"),
+
+    # Interval Samples
+    Timeseries.col("daylight_exposure").field("value"),
+    Timeseries.col("daylight_exposure").field("duration"),
+    Timeseries.col("daylight_exposure").field("timezone_offset"),
+
+    Timeseries.col("body_temperature_delta").field("value"),
+    Timeseries.col("body_temperature_delta").field("duration"),
+    Timeseries.col("body_temperature_delta").field("sensor_location"),
+    Timeseries.col("body_temperature_delta").field("timezone_offset"),
+
+    # Workout Interval Samples
+    Timeseries.col("workout_distance").field("value"),
+    Timeseries.col("workout_distance").field("duration"),
+    Timeseries.col("workout_distance").field("sport"),
+    Timeseries.col("workout_distance").field("workout_id"),
+)
+```
+
+</Accordion>
+
 ### External User ID of User Connections (April 2025)
 
 We now expose the _External User ID_ of User Connections in the [Provider Connection Created](/event-catalog/provider.connection.created) event
