--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -4,20 +4,25 @@ title: "API"
 
 import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
 
-# Introducing Timeseries Data Support to Continuous Query (June 2025)
+### Introducing Timeseries Data Support to Continuous Query (June 2025)
 
 <HorizonAIBeta />
 
-We've expanded Continuous Query to support **timeseries resources** in addition to the previously available summary types.
-This makes it easier for you to handle high‑volume timeseries data and eliminates the need to build custom scalable solutions on your backend.
+We have expanded Continuous Query to support **timeseries resources** in addition to the previously available summary resources.
 
-## What's New
+With a few simple configuration steps, Continuous Query enables you to extract aggregations of high‑volume timeseries data collected across all your active user device connections. 
+Moreover, offloading this concern to Junction would help simplify your data pipeline design, allowing your team to focus on extracting actionable signals for your end users and use cases.
 
-- **Query multiple fields** from different timeseries resources in a single operation
-- Retrieve both **discrete samples** (e.g. heart rate) and **interval samples** (e.g. workout distance)
+**What's New**
+
+- You can now select timeseries resources in a Query:
+    * For each resource, you can select all of specific fields of interest.
+    * You can select multiple timeseries resources simultaneously, even though they are of different types (discrete, interval of blood pressure).
 
 <Accordion icon="link" iconType="duotone" title="DSL Example" defaultOpen>
-**Example Select Expression**
+**Example Select Expressions**
+
+Python DSL:
 
 ```python
 select(
@@ -31,10 +36,6 @@ select(
     Timeseries.col("heartrate").field("timezone_offset"),
 
     # Interval Samples
-    Timeseries.col("daylight_exposure").field("value"),
-    Timeseries.col("daylight_exposure").field("duration"),
-    Timeseries.col("daylight_exposure").field("timezone_offset"),
-
     Timeseries.col("body_temperature_delta").field("value"),
     Timeseries.col("body_temperature_delta").field("duration"),
     Timeseries.col("body_temperature_delta").field("sensor_location"),
@@ -46,6 +47,72 @@ select(
     Timeseries.col("workout_distance").field("sport"),
     Timeseries.col("workout_distance").field("workout_id"),
 )
+```
+JSON DSL:
+
+```json
+[
+    # Blood Pressure
+    {
+      "timeseries": "blood_pressure",
+      "field": "systolic"
+    },
+    {
+      "timeseries": "blood_pressure",
+      "field": "diastolic"
+    },
+    {
+      "timeseries": "blood_pressure",
+      "field": "timezone_offset"
+    },
+    # Discrete Samples
+    {
+      "timeseries": "heartrate",
+      "field": "value"
+    },
+    {
+      "timeseries": "heartrate",
+      "field": "timezone_offset"
+    },
+    {
+      "timeseries": "heartrate",
+      "field": "type"
+    },
+    # Interval Samples
+    {
+      "timeseries": "body_temperature_delta",
+      "field": "value"
+    },
+    {
+      "timeseries": "body_temperature_delta",
+      "field": "duration"
+    },
+    {
+      "timeseries": "body_temperature_delta",
+      "field": "sensor_location"
+    },
+    {
+      "timeseries": "body_temperature_delta",
+      "field": "timezone_offset"
+    },
+    # Workout Interval Samples
+    {
+      "timeseries": "workout_distance",
+      "field": "value"
+    },
+    {
+      "timeseries": "workout_distance",
+      "field": "duration"
+    },
+    {
+      "timeseries": "workout_distance",
+      "field": "sport"
+    },
+    {
+      "timeseries": "workout_distance",
+      "field": "workout_id"
+    },
+]
 ```
 
 </Accordion>
