--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -13,13 +13,14 @@ We have expanded Continuous Query to support **timeseries resources** in additio
 With a few simple configuration steps, Continuous Query enables you to extract aggregations of high‑volume timeseries data collected across all your active user device connections. 
 Moreover, offloading this concern to Junction would help simplify your data pipeline design, allowing your team to focus on extracting actionable signals for your end users and use cases.
 
+<Accordion icon="link" iconType="duotone" title="Details" defaultOpen>
+
 **What's New**
 
 - You can now select timeseries resources in a Query:
     * For each resource, you can select all of specific fields of interest.
     * You can select multiple timeseries resources simultaneously, even though they are of different types (discrete, interval of blood pressure).
 
-<Accordion icon="link" iconType="duotone" title="DSL Example" defaultOpen>
 **Example Select Expressions**
 
 Python DSL:
