--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
@@ -128,3 +128,84 @@ va.select(...).group_by(
 ```
 </CodeGroup>
 
+## Group by any atrribute from the table expression
+
+Group the input rows based on a resource specific attribute or a shared source attribute.
+This is similar to the generic `GROUP BY` clause in SQL.
+
+<AccordionGroup>
+<Accordion title="Input argument" icon="arrow-right-to-bracket" iconType="duotone" defaultOpen>
+
+| Argument                          | Remarks
+| --------------------------------- | ---------------
+| source / timeseries / \<summary\>   | The input table expression to group by.
+
+</Accordion>
+
+<Accordion title="Output column name" icon="line-columns" iconType="duotone" defaultOpen>
+`group_key.$OFFSET` if this is the N-th expression in the `group_by` clause.
+
+See also: [Select the group key columns](/api-reference/horizon-ai/aggregation/query-dsl/select-clause#select-the-group-key-columns)
+</Accordion>
+</AccordionGroup>
+
+<CodeGroup>
+```python Python DSL
+import vitalx.aggregation as va
+
+# Group by the source provider and source type
+va.select(...).group_by(
+    va.date_trunc(va.Sleep.index(), 1, "week"),
+    va.Source.col("source_provider"),
+    va.Source.col("source_type")
+)
+
+# Group by the source provider, source type and type (idle vs stand)
+
+va.select(
+    va.group_key("*"),
+    va.Timeseries.col("stand_hour").field("value").sum()
+).group_by(
+    va.date_trunc(va.Timeseries.index(), 1, "day"),
+    va.Source.col("source_provider"),
+    va.Source.col("source_type"),
+    va.Timeseries.col("stand_hour").field("type")
+)
+```
+
+```python JSON DSL
+# Group by the source provider and source type
+{
+    "group_by": [
+        {
+            "date_trunc": {
+                "value": 1,
+                "unit": "week"
+            },
+            "arg": { "index": "sleep" }
+        },
+        { "source": "source_provider" },
+        { "source": "source_type" }
+    ]
+}
+
+# Group by the source provider, source type and type (idle vs stand)
+{
+    "group_by": [
+        {
+            "date_trunc": {
+                "value": 1,
+                "unit": "day"
+            },
+            "arg": { "index": "timeseries" }
+        },
+        { "source": "source_provider" },
+        { "source": "source_type" },
+        {
+            "timeseries": "stand_hour",
+            "field": "type"
+        }
+    ]
+}
+```
+</CodeGroup>
